# my-skills

./: .gitignore  check.sh
.skills/: registry.json
.skills/upstream/anyone-to-skill/: .gitignore  README.md  README_JA.md  README_KO.md  README_ZH_TW.md  SKILL.md  install.sh  pyproject.toml
.skills/upstream/anyone-to-skill/anyone2skill/: __init__.py  distill.py
.skills/upstream/anyone-to-skill/anyone2skill.egg-info/: PKG-INFO
.skills/upstream/anyone-to-skill/examples/dan-koe/: SKILL.md
academic-paper/: SKILL.md
ai-native-cli/: SKILL.md
alan-pipeline/: SKILL.md
anyone-to-skill/: README_EN.md  SKILL.md
axonhub/: SKILL.md
btca-local/: SKILL.md
cli-creator/: SKILL.md
exp-logger/: SKILL.md
external-repo/: SKILL.md
fair-experiment-tracker/: SKILL.md
figure-checker/: SKILL.md
gemini-image-gen/: SKILL.md
grill-me/: SKILL.md
image-gen/: SKILL.md
inno-figure-gen/: SKILL.md
interactive-html/: SKILL.md
lark/: SKILL.md
lark-paper-reader/: SKILL.md
latex-lint/: SKILL.md
officecli/: SKILL.md
overleaf/: SKILL.md
paper-dialog-reader/: SKILL.md
paper-drill/: SKILL.md
paper-figure-gen/: SKILL.md
paper-format-check/: SKILL.md
paper-reader/: SKILL.md
paper-sense-making/: README.md  SKILL.md
pdf/: SKILL.md
ph-paper-helper/: SKILL.md
ph-paper-research/: SKILL.md
ph-papers-helper/: SKILL.md
pi-subagent/: SKILL.md  routing.md
pi-threads/: SKILL.md
pi-tmux/: SKILL.md
py-logger/: SKILL.md
research-essay-page/: SKILL.md  index-template.html  refine_check.py  script.js  style.css  template-minimal.html  template.html
(+488 files in other folders)
